--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <hello name="{{ name }}"></hello>
 <p>
-  Start editing to see some magic happen :)
+  Damir is student.
 </p>
+<p>IS is Hard.</p>
+<p>I love progrsmming</p>
